<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              tools:ignore="UseCompoundDrawables">
    <ImageView
            android:id="@+id/iv_players"
            android:layout_width="@dimen/iv_team"
            android:layout_height="@dimen/iv_team"
            android:contentDescription="@string/player_photo"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/padding_top"
            android:layout_marginBottom="@dimen/padding_bottom"
    />

    <TextView
            android:id="@+id/tv_player_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/player"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/team_name"
            android:textStyle="normal"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
    />

    <TextView
            android:id="@+id/tv_player_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lineup"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="right"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            tools:ignore="RtlHardcoded"/>

</LinearLayout>