<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".mvp.detail.player.DetailPlayerActivity">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ImageView
                android:id="@+id/iv_player_detail"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="fitCenter"
                android:contentDescription="@string/player"/>
        <LinearLayout
                android:id="@+id/weight_height_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/iv_player_detail"
                android:padding="@dimen/padding"
        >
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/height"
                    android:textAlignment="center"
                    android:layout_weight="1"
            />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"
                    android:textAlignment="center"
                    android:layout_weight="1"
            />
        </LinearLayout>
        <LinearLayout
                android:id="@+id/weight_height_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/weight_height_container"
                android:padding="@dimen/padding"
        >
            <TextView
                    android:id="@+id/height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_score"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:layout_weight="1"
            />
            <TextView
                    android:id="@+id/weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_score"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:layout_weight="1"
            />
        </LinearLayout>
        <TextView
                android:id="@+id/tv_player_position_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/weight_height_value"
                android:padding="@dimen/padding"
                android:text="@string/forward"
                android:textSize="@dimen/team_name"
                android:textStyle="bold"
                android:textAlignment="center"
        />
        <View
                android:id="@+id/detail_shadow"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@drawable/shadow"
                android:layout_below="@id/tv_player_position_detail"
        />
        <TextView
                android:id="@+id/tv_player_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/detail_shadow"
                android:padding="@dimen/padding"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
        />
    </RelativeLayout>
</ScrollView>