<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        android:id="@+id/detail_scrollview"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".mvp.detail.DetailMatchActivity">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding"
    >

        <ProgressBar
                android:id="@+id/detail_progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminateOnly="true"
                style="?android:attr/progressBarStyleHorizontal"
                android:padding="@dimen/padding"
        />
        <TextView
                android:id="@+id/detail_date_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_rv_text"
                android:gravity="center"
                android:textSize="@dimen/date"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
        />

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:gravity="center_horizontal"
        >
            <TextView
                    android:id="@+id/tv_detail_home_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/detail_score"
                    android:textColor="@android:color/holo_blue_bright"
                    android:text="@string/default_score"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
            />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_vs"
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_red_light"
                    android:gravity="center"
            />
            <TextView
                    android:id="@+id/tv_detail_away_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/detail_score"
                    android:textColor="@android:color/holo_blue_bright"
                    android:text="@string/default_score"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
            />
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/padding"
                android:gravity="center_horizontal"
                android:baselineAligned="false">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent" 
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
            >
                <ImageView
                        android:id="@+id/detail_image_home_badge"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/team_badge"/>
                <TextView
                        android:id="@+id/tv_detail_home_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/default_rv_text"
                        android:textSize="18sp"
                        android:textStyle="bold"
                />
                <TextView
                        android:id="@+id/tv_detail_home_formation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_rv_text"
                        android:textStyle="normal"
                        android:textSize="@dimen/team_name"
                        android:textColor="@color/colorAccent"
                />
                
            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
            >
                <ImageView
                        android:id="@+id/detail_image_away_badge"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/team_badge"/>
                <TextView
                        android:id="@+id/tv_detail_away_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/default_rv_text"
                        android:textSize="18sp"
                        android:textStyle="bold"
                />
                <TextView
                        android:id="@+id/tv_detail_away_formation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_rv_text"
                        android:textStyle="normal"
                        android:textSize="@dimen/team_name"
                        android:textColor="@color/colorAccent"
                />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:padding="@dimen/padding"
                android:gravity="center">
            <TextView
                    android:id="@+id/detail_home_goal_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/default_rv_text"
                    android:gravity="center"
            />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/goals"
                    android:paddingLeft="@dimen/padding"
                    android:paddingRight="@dimen/padding"
            />
            <TextView
                    android:id="@+id/detail_away_goal_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/default_rv_text"
                    android:gravity="center"
            />

        </LinearLayout>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/cards"
                android:textStyle="bold"
                android:textSize="@dimen/team_name"
                android:textColor="@color/colorPrimary"
                android:gravity="center"
        />

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="@dimen/padding"
        >
            <TextView
                    android:id="@+id/detail_home_red_cards"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/default_rv_text"
                    android:gravity="center"
            />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/red_cards"
                    android:paddingLeft="@dimen/padding"
                    android:paddingRight="@dimen/padding"
            />
            <TextView
                    android:id="@+id/detail_away_red_cards"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/default_rv_text"
                    android:gravity="center"
            />

        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="@dimen/padding"
        >
            <TextView
                    android:id="@+id/detail_home_yellow_cards"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/default_rv_text"
                    android:gravity="center"
            />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yellow_cards"
                    android:paddingLeft="@dimen/padding"
                    android:paddingRight="@dimen/padding"
            />
            <TextView
                    android:id="@+id/detail_away_yellow_cards"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/default_rv_text"
                    android:gravity="center"
            />

        </LinearLayout>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/lineup"
                android:textStyle="bold"
                android:textSize="@dimen/team_name"
                android:textColor="@color/colorPrimary"
                android:gravity="center"
        />

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="@dimen/padding"
        >
            <TextView
                    android:id="@+id/detail_home_goalkeeper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/default_rv_text"
                    android:gravity="center"
            />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/goalkeeper"
                    android:paddingLeft="@dimen/padding"
                    android:paddingRight="@dimen/padding"
            />
            <TextView
                    android:id="@+id/detail_away_goalkeeper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/default_rv_text"
                    android:gravity="center"
            />

        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="@dimen/padding"
        >
            <TextView
                    android:id="@+id/detail_home_defense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/default_rv_text"
                    android:gravity="center"
            />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/defense"
                    android:paddingLeft="@dimen/padding"
                    android:paddingRight="@dimen/padding"
            />
            <TextView
                    android:id="@+id/detail_away_defense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/default_rv_text"
                    android:gravity="center"
            />

        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="@dimen/padding"
        >
            <TextView
                    android:id="@+id/detail_home_midfield"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/default_rv_text"
                    android:gravity="center"
            />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/midfield"
                    android:paddingLeft="@dimen/padding"
                    android:paddingRight="@dimen/padding"
            />
            <TextView
                    android:id="@+id/detail_away_midfield"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/default_rv_text"
                    android:gravity="center"
            />

        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="@dimen/padding"
        >
            <TextView
                    android:id="@+id/detail_home_forward"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/default_rv_text"
                    android:gravity="center"
            />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forward"
                    android:paddingLeft="@dimen/padding"
                    android:paddingRight="@dimen/padding"
            />
            <TextView
                    android:id="@+id/detail_away_forward"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/default_rv_text"
                    android:gravity="center"
            />
        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="@dimen/padding"
        >
            <TextView
                    android:id="@+id/detail_home_substitute"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/default_rv_text"
                    android:gravity="center"
            />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/substitute"
                    android:paddingLeft="@dimen/padding"
                    android:paddingRight="@dimen/padding"
            />
            <TextView
                    android:id="@+id/detail_away_substitute"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/default_rv_text"
                    android:gravity="center"
            />
        </LinearLayout>

    </LinearLayout>

</ScrollView>