<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:tools="http://schemas.android.com/tools" android:id="@+id/item_last_match"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/padding_bottom"
        android:orientation="vertical">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            tools:ignore="UselessParent">
        <TextView
                android:id="@+id/last_date_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_rv_text"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/date"
                android:textStyle="bold"
                android:gravity="center"
                android:paddingTop="@dimen/padding_top"
                android:paddingBottom="@dimen/padding_bottom"
        />
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
        >
            <TextView
                    android:id="@+id/tv_last_home_team"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/default_rv_text"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/team_name"
                    android:textStyle="bold"
                    android:gravity="center"
            />
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
            >
                <TextView
                        android:id="@+id/tv_last_home_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_score"
                        android:textSize="@dimen/team_score"
                        android:textColor="@color/colorAccent"
                        android:padding="@dimen/padding"
                />

                <TextView
                        android:id="@+id/tv_vs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_vs"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/team_name"
                />

                <TextView
                        android:id="@+id/tv_last_away_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_score"
                        android:textSize="@dimen/team_score"
                        android:textColor="@color/colorAccent"
                        android:padding="@dimen/padding"
                />
            </LinearLayout>

            <TextView
                    android:id="@+id/tv_last_away_team"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/default_rv_text"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/team_name"
                    android:textStyle="bold"
                    android:gravity="center"
            />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>